# counter-strike-winner

./: .gitignore  README.md  pyproject.toml
conf/: settings.py
conf/models/: lightgbm.py  logistic_regression.py  neural_network.py  xgboost.py
notebooks/: 01_data.ipynb  01_eda.ipynb  02_features.ipynb  03_training.ipynb  04_evaluate.ipynb  05_predict.ipynb  06_major_backtest.ipynb  resultados_reais.md
src/: __init__.py
src/module/model/: __init__.py  compete.py  data.py  evaluate.py  explain.py  model.py  predict.py  settings.py  train.py
src/module/model/features/: README.md  __init__.py  consistency_features.py  differential_features.py  event_stage_features.py  fatigue_features.py  form_features.py  format_features.py  historical_features.py  map_features.py  momentum_features.py  player_features.py  player_ranking_features.py  ranking_features.py  round_features.py  team_history_features.py  temporal_features.py
tests/: test_data.py  test_features.py  test_predict.py
utils/: __init__.py  data_processing.py  decorators.py  file_utils.py  helpers.py  logger.py
