[tool.poetry]
name = "counter-strike-winner"
version = "0.1.0"
description = "ML model to predict Counter-Strike match winners"
authors = ["ksenhuck <ksenhuck@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
pyarrow = "^17.0"
scikit-learn = "^1.5"
xgboost = "^2.1"
lightgbm = "^4.5"
joblib = "^1.4"
numpy = "^1.26"
matplotlib = "^3.9"
seaborn = "^0.13"
shap = "^0.46"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6"
ipykernel = "^6.29"
jupyter = "^1.1"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov=utils --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
